# pygtest

./: .gitignore  LICENSE  README.md  pyproject.toml
pygtest/: __main__.py  dependency.py  pygtest.py  runner.py
tests/: test_collection.py
