[tool.poetry]
name = "pygtest"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Potoropin <slavapotoropin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
my-client = "pygtest.main:main"
